--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-				 <link rel="stylesheet" href="{{url_for('static',filename='/index.css')}}">
-        <title> {% block title %}  {% endblock %} </title>
+       <meta charset="utf-8">
+	     <link rel="stylesheet" href="{{url_for('static',filename='/index.css')}}">
+       <title> {% block title %}  {% endblock %} </title>
     </head>
     <body>
+       {% block navbar %}
+           {% include 'navbar.html' %}
+       {% endblock %}
 
-        {% block content %}
+       {% block content %}
 
-        {% endblock%}
+       {% endblock%}
     </body>
 </html> 
