--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,3 +1,4 @@
+{% block content%}
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -12,3 +13,4 @@
     </div>
 </div> 
 <hr>
+{% endblock%}
