--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
+<! DOCTYPE html >
 <html>
     <head>
        <meta charset="utf-8">
-	     <link rel="stylesheet" href="{{url_for('static',filename='/index.css')}}">
+         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+	     <link rel="stylesheet" href="{{url_for('static',filename='Css/style.css')}}">
        <title> {% block title %}  {% endblock %} </title>
     </head>
     <body>
+    {% extends 'bootstrap/base.html' %}
        {% block navbar %}
            {% include 'navbar.html' %}
        {% endblock %}
