--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,4 +1,4 @@
-{% block content%}
+ {% block content%}
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -8,9 +8,8 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a style="font-size: 50px;" class="navbar-brand" href="/"> News App </a>
+            <a style="font-size: 50px; color: white;" class="navbar-brand" href="/"> News App </a>
         </div>
     </div>
 </div> 
-<hr>
-{% endblock%}
+{% endblock%} 
