--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -1,20 +1,20 @@
-<div class="container">
-  <h3 style="font-size: 25px">NEWS DETAILS</h3>
+ <div class="container">
+  <h3 style="font-size: 25px">NEWS Articles</h3>
   <div class="row">
     <div class="col-md-3">
       <div class="card" style="width: 18rem">
-        <img src="{{detail.pathToImage}}" class="card-img-top" style="height: 18vh" alt=".image here"/>
+        <img src="{{article.pathToImage}}" class="card-img-top" style="height: 18vh" alt=".image here"/>
         <div class="card-body mt-5" style="background-color: rgb(245, 34, 227)">
-          <h5 class="card-title"><b>{{detail.title}}</b></h5>
-          <p class="card-text">{{detail.description | truncate(250)}}</p>
-          <a href="{{detail.url}}" class="btn btn-primary">Read Details</a>
+          <h5 class="card-title"><b>{{article.title}}</b></h5>
+          <p class="card-text">{{article.description | truncate(250)}}</p>
+          <a href="{{article.url}}" class="btn btn-primary">Read Articles</a>
         </div>
         <div class="card-footer">
-          <small> {{detail.datePublished}} </small>
+          <small> {{article.datePublished}} </small>
         </div>
       </div>
       <br />
       <br />
     </div>
   </div>
-</div>
+</div>  
